--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "motion-v": "^1.5.0",
     "nuxt-aos": "^1.2.5",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
