--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@nuxt/image": "^2.0.0",
     "nuxt": "^4.0.0",
     "vite": "^7.0.4"
   }
