--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "lucide-vue-next": "^0.554.0",
     "motion-v": "^1.5.0",
     "nuxt-aos": "^1.2.5",
+    "shadcn-nuxt": "^2.3.3",
+    "tailwind-merge": "^3.4.0",
+    "tw-animate-css": "^1.4.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
